Grease Pencil Edit mode: Can't select anything #109207

Closed
opened 2023-06-21 15:21:27 +02:00 by Piotr Nikov · 3 comments

System Information
Operating system: MacOs 13.4 & WIN11
Graphics card: M1 Max, Quadro 1000

Blender Version
Broken: Blender 4.0 Date: 2023-06-09 (b7d2ff61bc)
Worked: Blender 4.0 Date: 2023-06-07 18:09 (3cale828e22b)

Grease Pencil Edit mode can't select points or strokes.

Exact steps for others to reproduce the error

  1. Create Grease Pencil.
  2. Draw a stroke.
  3. Go in Edit mode.
  4. Try to select points or strokes.
    Doesn't work.
    Thanks!

Piotr

**System Information** Operating system: MacOs 13.4 & WIN11 Graphics card: M1 Max, Quadro 1000 **Blender Version** Broken: Blender 4.0 Date: 2023-06-09 (b7d2ff61bcbf) Worked: Blender 4.0 Date: 2023-06-07 18:09 (3cale828e22b) Grease Pencil Edit mode can't select points or strokes. **Exact steps for others to reproduce the error** 1. Create Grease Pencil. 2. Draw a stroke. 3. Go in Edit mode. 4. Try to select points or strokes. Doesn't work. Thanks! Piotr
Piotr Nikov added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-21 15:21:27 +02:00
Iliya Katushenock added the
Interest
Grease Pencil
label 2023-06-21 15:22:05 +02:00
Member

I can confirm for box/lasso select.
But selection works when same operations are called from select panel.
Guess this is related to recent GPv3 implementation of selection operators: (ex: 7f4f771442)

Try to select points or strokes.

Individual point/stroke selection works fine here in current master

I can confirm for box/lasso select. But selection works when same operations are called from select panel. Guess this is related to recent GPv3 implementation of selection operators: (ex: 7f4f771442bdbc7d8c1bf08a54edb3af0a92f490) > Try to select points or strokes. Individual point/stroke selection works fine here in current master
Pratik Borhade self-assigned this 2023-06-21 15:48:12 +02:00
Author

Thanks for being more precise than me :)
I might add also for the record that I am not using GPv3.
I'm sure it's not helpful, but I figured I'd say it any ways...

Thanks for being more precise than me :) I might add also for the record that I am not using GPv3. I'm sure it's not helpful, but I figured I'd say it any ways...
Member

I might add also for the record that I am not using GPv3.

Yes, I know.

AFAICS, reverting the tool list change from 7f4f771442 fixes the problem.

@filedescriptor ^

> I might add also for the record that I am not using GPv3. Yes, I know. AFAICS, reverting the [tool list](https://projects.blender.org/blender/blender/blame/branch/main/scripts/startup/bl_ui/space_toolsystem_toolbar.py#L3116) change from 7f4f771442 fixes the problem. @filedescriptor ^
Pratik Borhade added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-21 15:55:26 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-21 16:49:33 +02:00
Falk David added this to the Grease Pencil project 2023-06-21 16:52:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109207
No description provided.